# claude-launcher

./: LICENSE  README.md  cl.bat  pyproject.toml  setup.ps1
src/claude_launcher/: __init__.py  __main__.py  config.py  keyboard.py
src/claude_launcher/data/: __init__.py  discovery.py  models.py
src/claude_launcher/ui/: __init__.py  repo_picker.py  session_picker.py  wizard.py
tests/: test_all.py
